Code clean up and Added inform about the project in readme

--- a/inventory-management/src/main/resources/application.yml
+++ b/inventory-management/src/main/resources/application.yml
@@ -9,7 +9,7 @@ spring:
 #    driverClassName: org.h2.Driver
    url: jdbc:postgresql://localhost:5432/Figures
    username: postgres
-   password: ASSwecan1995
+   password:
 #  jpa:
 #    database-platform: org.hibernate.dialect.H2Dialect
 #    defer-datasource-initialization: true
